--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         let unfurled = "unfurled";
 
         //X:
-        let webDeveloper = "wed developer";
+        let webDeveloper = "web developer";
         let pixel = "pixels";
         let binary = "binary";
         let clicks = "clicks";
