--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
     <script>
         //Intro:
         let Rham = "Rham";
-        let browserAlchemist = "alchemist of the browser";
+        let browserAlchemist = "**alchemist of the browser**";
         let realm = "realm";
         let pixels = "pixels";
         let code = "code";
-        let title = "web weaver";
+        let title = "**web weaver**";
         let pearls = "pearls";
 
         //I:
@@ -85,7 +85,7 @@
         let symphonies = "symphonies";
 
         //III:
-        let CSScloak = "CSS cloak";
+        let CSScloak = "**CSS cloak**";
         let Styling = "Styling";
         let colors = "Colors bloom";
         let fonts = "fonts sing";
@@ -96,12 +96,12 @@
         let will = "will";
         let Forms = "Forms";
         let animation = "animation propel";
-        let jsSpells = "JavaScript spells";
+        let jsSpells = "**JavaScript spells**";
 
         //V:
         let bugs = "bugs";
         let glitches = "glitches";
-        let debuggingSpectacles = "debugging spectacles";
+        let debuggingSpectacles = "**debugging spectacles**";
         let codes = "code's arc";
         let tames = "tames";
         let variables = "variables";
@@ -109,14 +109,14 @@
         //VI:
         let Across = "Across";
         let devices = "devices";
-        let responsiveSea = "responsive sea";
+        let responsiveSea = "**responsive sea**";
         let guide = "guide";
         let Adapting = "Adapting";
         let fluidity = "fluidity";
 
         //VII:
         let labyrinth = "labyrinth";
-        let seoWhisperer = "SEO whisperer";
+        let seoWhisperer = "**SEO whisperer**";
         let metatags = "meta tags";
         let wanderers = "wanderers";
 
@@ -135,7 +135,7 @@
         let unfurled = "unfurled";
 
         //X:
-        let webDeveloper = "web developer";
+        let webDeveloper = "**web developer**";
         let pixel = "pixels";
         let binary = "binary";
         let clicks = "clicks";
